<resources>
    <string name="app_name">Weather App</string>
    <string name="title_search">Search</string>
    <string name="title_favorites">My Cities</string>
    <string name="title_settings">Settings</string>
    <string name="text_recent">Recent</string>
    <string name="search_cities_hint">Search Cities</string>
    <string name="temperature_celsius_sign">%1$s%2$s</string>
    <string name="distance_km">Distance: %1$s km</string>
    <string name="pressure">PRESSURE</string>
    <string name="min_max">MIN / MAX</string>
    <string name="accuracy">ACCURACY</string>
    <string name="visibility">VISIBILITY</string>
    <string name="wind">WIND</string>
    <string name="humidity">HUMIDITY</string>
    <string name="today">Today</string>
    <string name="next_5_days">Next 5 Days</string>
    <string name="grid_minmax">%1$s° / %2$s°</string>
    <string name="date">%1$s, %2$s %3$s</string>
    <string name="grid_wind">%1$s %2$s (%3$s)</string>
    <string name="grid_humidity">%1$s\%%</string>
    <string name="grid_accuracy">%1$s\%%</string>
    <string name="grid_pressure">%1$s %2$s</string>
    <string name="grid_visibility">%1$s %2$s</string>
    <string name="time">%1$s:00</string>
    <string name="view_more">VIEW MORE</string>
    <string name="my_cities">My Cities</string>
    <string name="recent_tv">Recent</string>
    <string name="results_tv">Results</string>
    <string name="settings">Settings</string>
    <string name="city">City</string>
    <string name="language">Language</string>
    <string name="placeholder_text">Vestibulum rutrum quam vitae fringilla tincidunt. Suspendisse nec tortor urna. Ut laoreet sodales nisi, quis iaculis nulla iaculis.</string>
    <string name="more_info">MORE INFO</string>
    <string name="choose_type_of_unit">Choose type of unit</string>
    <string name="imperial">Imperial</string>
    <string name="metric">Metric</string>
    <string name="clear_my_cities_list">Clear My Cities List</string>
    <string name="clear_recent_search_list">Clear Recent Search List</string>
    <string name="clear_recent_search_list_q">Clear recent search list?</string>
    <string name="clear_my_cities_list_q">Clear my cities list?</string>
    <string name="recents_clear_warning">If you clear your recent search list, your home screen will be empty.</string>
    <string name="favorites_clear_warning">If you clear your favorites list, your cities screen will be empty.</string>
    <string name="clear">Clear</string>
    <string name="cancel">Cancel</string>
    <string name="recent_is_clear">Recent search list is clear.</string>
    <string name="cities_is_clear">Favorites list is clear.</string>
    <string name="rafael_boban">Rafael Boban</string>
    <string name="developer">Developer</string>
    <string name="metaweather">metaweather</string>
    <string name="api_credit">API Credit</string>
    <string name="weather_app">Weather App</string>
    <string name="class_2021">Class 2021</string>
    <string name="sofascore_android_academy">SofaScore Android Academy</string>
    <string name="about">About</string>
    <string name="network_error">Network Error. Are you connected?</string>
    <string-array name="languages">
        <item>English</item>
        <item>Croatian</item>
    </string-array>
</resources>