<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/dialog_title"
            style="@style/Headline2DarkLeft"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/clear_recent_search_list_q"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/warning_text"
            style="@style/BodyDarkLeft"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/recents_clear_warning"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialog_title" />

        <Button
            android:id="@+id/clear_button"
            android:layout_width="94dp"
            android:layout_height="36dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/purple_500"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/clear"
            android:textAllCaps="true"
            android:textColor="@color/white"
            app:cornerRadius="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/warning_text" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="94dp"
            android:layout_height="36dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/cancel"
            android:textAllCaps="true"
            android:textColor="@color/purple_500"
            app:layout_constraintBaseline_toBaselineOf="@+id/clear_button"
            app:layout_constraintEnd_toStartOf="@id/clear_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>
